<resources>
    <string name="app_name">Budget Buddy</string>
    <string name="btnSignIn">Sign In</string>
    <string name="txtPwd">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="btn_login">Login</string>
    <string name="company_logo">Company Logo</string>
    <string name="btnSignIn2">Sign In</string>
    <string name="hint_pwd">*************</string>
    <string name="txtViewForgotPwd">Forgot Password?</string>
    <string name="hint_Email">johnsmith@email.com</string>
    <string name="txtVRegister">Register</string>
    <string name="btn_register">Register</string>
    <string name="txtViewHaveAnAcct">Already Have an Account?</string>
    <string name="username">User name</string>
    <string name="email2">Email Address</string>
    <string name="password">*************</string>
    <string name="txtSign_in">Login</string>
    <string name="txtAddIncome">Add Income</string>
    <string name="income">Income</string>
    <string name="incomeDate">Select Income Date</string>
    <string name="addIncome">Add Income</string>
    <string name="txtVLogin">Sign In</string>
    <string name="txtNoAccount">No Account?</string>
    <string name="txtSignUp">SignUp</string>
    <string name="txtAddExpense">Add Expense</string>
    <string name="hintExpense">Add Expense</string>
    <string name="txtCategory">Select Category</string>
    <string name="txtIncomeDate">Income Date</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome " </string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txtForgotPassword">Forgot Password</string>
    <string name="txtbtnExport">Export Report(PDF)</string>
    <string name="txtbtnExport2">Export Report(CSV)</string>
    <string name="txtEmail">Email*</string>
    <string name="txtViewText">Please enter your registered email below to receive password reset link </string>
    <string name="btnResetPwd">Reset Password</string>
    <string name="hintTxtEmailReset">Enter your registered Email</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="SpendingHistory">Transaction History</string>
    <string name="spendingByCat">Spending By Category</string>
    <string name="menu_home">Home</string>
    <string name="menu_income">Add Income</string>
    <string name="menu_expense">Add Expense</string>
    <string name="menu_addAllocation">Add Allocation</string>
    <string name="menu_addBudget">Add Budget</string>
    <string name="menu_history">Transaction History</string>
    <string name="menu_spendingByCat">Spending by Category</string>
    <string name="txtExpenseIcon">EXPENSE</string>
    <string name="txtIconAddIncome">INCOME</string>
    <string name="txtAddBudget">BUDGET</string>
    <string name="txtHomeIcon">HOME</string>
    <string name="morning">Good Morning %1$s!</string>
    <string name="noon">Good Afternoon %1$s!</string>
    <string name="evening">Good Evening %1$s!</string>
    <string name="txtView">Text View</string>

    <string name="txtaddnewallocation">ADD ALLOCATION</string>
    <string name="txtaddnewbudget">ADD BUDGET</string>


    <string name="select_category">Select Category</string>
    <string name="add_expense">Add Expense</string>
    <string name="expense">Expense</string>
    <string name="description">Description</string>
    <string name="select_expense_date">Select Expense Date</string>
    <string name="icon_spinner_cat">Icon</string>
    <string name="category">Category</string>
    <string name="date">Transaction Date</string>
    <string name="Description">Description</string>
    <string name="Amount">Amount</string>
    <string name="expense_error">Expense cannot be less than or equal to 0</string>
    <string name="expense_description_error">Description cannot be empty or greater than 25 characters long</string>
    <string name="expense_category_error">Category is unknown</string>
    <string name="statistics">Statistics</string>
    <string name="expense_date_error">Please provide a valid date in the dd-mm-yyyy format</string>
    <string name="txtMonthlyExpenditure">Total Monthly Expenditure</string>
    <string name="txtMonthlyAllocated">Total Monthly Allocated</string>
    <string name="no_expenditure">No expenditure added yet</string>
    <string name="select_category_to_view">Select a Category to view details</string>
    <string name="no_budget">No allocation found for the month</string>
    <string name="add_allocation">Add Allocation</string>
    <string-array name="Categories">
        <item>Housing</item>
        <item>Transportation</item>
        <item>Food and Dinning</item>
        <item>Utilities</item>
        <item>Insurance</item>
        <item>Medical and Healthcare</item>
        <item>Personal spending</item>
        <item>Recreation and Entertainment</item>
        <item>Miscellaneous</item>
    </string-array>
</resources>
