<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:textAlignment="textEnd">

    <TextView
        android:id="@+id/txtViewHeaderDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:padding="5dp"
        android:text="@string/date"
        android:textAlignment="viewStart"
        android:textColor="@color/red_200"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViewHeaderDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:padding="5dp"
        android:text="@string/Description"
        android:textAlignment="center"
        android:textColor="@color/red_200"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViewHeaderAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:padding="5dp"
        android:text="@string/Amount"
        android:textAlignment="viewEnd"
        android:textColor="@color/red_200"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>