<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/brown_100"
    android:layout_height="match_parent"
    tools:context=".PasswordReset">
    <TextView
        android:id="@+id/txtViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/txtForgotPassword"
        android:textColor="@color/red_200"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewText"
        android:layout_width="372dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:text="@string/txtViewText"
        android:textColor="@color/red_200"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewForgotPassword" />

    <EditText
        android:id="@+id/editTxtEmail"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hintTxtEmailReset"
        android:inputType="textPersonName|textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/red_700"
        android:textColorHint="@color/material_dynamic_neutral70"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewText" />

    <Button
        android:id="@+id/btn_Reset"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/btnResetPwd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtEmail"
        app:layout_constraintVertical_bias="0.25" />



</androidx.constraintlayout.widget.ConstraintLayout>