<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_100"
    tools:context=".ui.add_income.IncomeFragment">


    <TextView
        android:id="@+id/txtIncomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/txtAddIncome"
        android:textColor="@color/red_200"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextIncome"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autoText="true"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_attach_money_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/income"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/red_700"
        android:textColorHint="@color/red_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIncomeTitle"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autoText="true"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_description_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/red_700"
        android:textColorHint="@color/red_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIncome"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_calendar_month_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/incomeDate"
        android:inputType="date"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/red_700"
        android:textColorHint="@color/red_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <Button
        android:id="@+id/btnAddIncome"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/addIncome"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</androidx.constraintlayout.widget.ConstraintLayout>